cabal-version:          2.2
name:                   CryptoChallenge
version:                1.0.0.0
synopsis:               Solutions to the Cryptopals Crypto Challenges
homepage:               https://github.com/gilgamec/CryptoChallenge#readme
author:                 Brendan Lane
maintainer:             gilgamec@gmail.com
copyright:              2022 Brendan Lane
license:                BSD-3-Clause
license-file:           LICENSE
build-type:             Simple

extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/gilgamec/CryptoChallenge

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.10 && < 5
                      , bytestring
                      , base16-bytestring
                      , base64-bytestring
                      , vector
                      , cryptonite
                      , random, MonadRandom
                      , url, email-validate
                      , time
                      , memory
  build-tool-depends:   markdown-unlit:markdown-unlit
  ghc-options:          -O2 -pgmL markdown-unlit
  exposed-modules:      AES
                      , BlockTools
                      , Bytes
                      , Bytes.Hex
                      , Bytes.Base64
                      , Bytes.Integral
                      , Distribution
                      , Distribution.English
                      , Hash
                      , MersenneTwister
                      , Padding.Hash
                      , Padding.PKCS7
                      , Random
                      , Util
                      , XORCipher

                      , Challenge11, Challenge12, Challenge13, Challenge14
                      , Challenge16

                      , Challenge17, Challenge22, Challenge24

                      , Challenge25, Challenge26, Challenge27, Challenge29

test-suite FastTests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              FastTests.hs
  hs-source-dirs:       test
  build-depends:        base >= 4.10 && <5
                      , CryptoChallenge
                      , HUnit, test-framework, test-framework-hunit
                      , bytestring
                      , time, random, MonadRandom
  ghc-options:          -O2 -threaded -rtsopts -with-rtsopts=-N
                        -main-is FastTests
  other-modules:        TestFramework
                      , Test1, Test2, Test3, Test4
                      , Test5, Test6, Test7, Test8

                      , Test9, Test10, Test11, Test12
                      , Test13, Test14, Test15, Test16

                      , Test17, Test18, Test20, Test21
                      , Test22, Test23, Test24

                      , Test25, Test26, Test27, Test28
                      , Test29
